<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.detail.DetailContactFragment">

    <TextView
        android:id="@+id/tv_detailcontact_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detailcontact_title"
        android:layout_margin="18dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollview_detailcontact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_detailcontact_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_detailcontact_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailcontact_fullname"
                android:layout_marginTop="12dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/et_detailcontact_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="14sp"
                android:maxLength="50"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailcontact_fullname" />

            <TextView
                android:id="@+id/tv_detailcontact_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailcontact_age"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_detailcontact_fullname"/>

            <EditText
                android:id="@+id/et_detailcontact_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="14sp"
                android:maxLength="3"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailcontact_age" />

            <TextView
                android:id="@+id/tv_detailcontact_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailcontact_phone"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_detailcontact_age"/>

            <EditText
                android:id="@+id/et_infoclient_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="14sp"
                android:maxLength="15"
                android:ems="10"
                android:inputType="phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailcontact_phone" />

            <TextView
                android:id="@+id/tv_detailcontact_cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailcontact_cep"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_infoclient_phone"/>

            <EditText
                android:id="@+id/et_detailcontact_cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="14sp"
                android:maxLength="8"
                android:inputType="phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailcontact_cep" />

            <TextView
                android:id="@+id/tv_detailcontact_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailcontact_street"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_detailcontact_cep"/>

            <EditText
                android:id="@+id/et_detailcontact_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="14sp"
                android:maxLength="50"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailcontact_street" />

            <TextView
                android:id="@+id/tv_detailcontact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailcontact_number"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_detailcontact_street"/>

            <EditText
                android:id="@+id/et_detailcontact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="14sp"
                android:maxLength="5"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailcontact_number" />

            <TextView
                android:id="@+id/tv_detailcontact_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailcontact_city"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_detailcontact_number"/>

            <EditText
                android:id="@+id/et_detailcontact_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="14sp"
                android:maxLength="50"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailcontact_city" />

            <TextView
                android:id="@+id/tv_detailcontact_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailcontact_state"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_detailcontact_city"/>

            <EditText
                android:id="@+id/et_detailcontact_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="14sp"
                android:maxLength="50"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailcontact_state" />

            <Button
                android:id="@+id/bt_detailcontact_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="16sp"
                android:text="@string/detailcontact_save"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_detailcontact_state"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>